Scrollbar Fixed

--- a/css/classes.css
+++ b/css/classes.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 
+
 body{
     background-color: var(--main-bg-color);
     color: var(--main-font-color);
@@ -53,23 +54,6 @@ body{
     background-attachment: fixed;
     background-size: cover;
 }
-
-.top-bg-picture:before {
-    content: "";
-    display: block;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -10;
-    background: url(photos/2452.jpg) no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
 
 .name-card-container{
     justify-content: center;
